From 6ce1d98 (master):
=====================

In prisim/examples/ioparms/data_setup_parms.yaml,

(*) Provide default URL for PRISim data
(*) Add fid parameter to specify file ID
(*) Works specifically for files on Google Drive

In scripts/setup_prisim_data.py,

(*) Import gdown
(*) Remove import of requests module
(*) Remove url_default variable
(*) Rename download() with download_old() and comment it out
(*) Create new function download() that calls gdown.download()
(*) In main(), call new download() function

In setup.py,

(*) Include module gdown in install_requires and setup_requires

From 39498a5 (gleam):
====================

In README.rst,

(*) Update links to external data files for PRISim to account for the
update to the GLEAM catalog

From 15178ed (master):
=====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Change default file of GLEAM catalog

In scripts/run_prisim.py,

(*) Update reading of GLEAM catalog to latest version

From 81755b0 (master):
=====================

In scripts/make_redundant_visibilities.py,

(*) Fix bug in determining unique baselines

From 59b3e2e (master):
=====================

In scripts/run_prisim.py,

(*) Check for lowercase input for telescope_id

From 586d6ae (pyuvdata):
=======================

In prisim/interferometry.py,

(*) Write antenna positions relative to telescope location into
pyuvdata object for UVFITS output

From c2d88e1 (tmp):
==================

In scripts/run_prisim.py,

(*) Check for external beam to be peak normalized

From 0ba8ad6 (master), fa6fcb2 (closure-adv):
============================================

(*) Merge changes from master branch onto closure-adv

From 95d415d (closure-adv):
==========================

In prisim/interferometry.py,

(*) Add input keyword unique to member function
getThreePointCombinations() of class InterferometerArray to return
all or only unique 3-point combinations of baseline triads. Update
member function and class docstrings accordingly