@@ -9,7 +9,6 @@ import prisim
 
 prisim_path = prisim.__path__[0]+'/'
 tarfilename = 'prisim_data.tar.gz'
-# url_default = 'https://www.dropbox.com/s/7y9go1bzjfa0rkv/prisim_data.tar.gz?dl=1'
 
 def download(url=None, outfile=None, verbose=True):
     if url is not None:
@@ -20,26 +19,6 @@ def download(url=None, outfile=None, verbose=True):
         elif not isinstance(outfile, str):
             raise TypeError('outfile must be a string')
         gdown.download(url, outfile, quiet=(not verbose))
-
-# def download_old(url=None, outfile=None, verbose=True):
-#     if url is None:
-#         url = url_default
-#     elif not isinstance(url, str):
-#         raise TypeError('Input url must be a string')
-#     if outfile is None:
-#         outfile = prisim_path+tarfilename
-#     elif not isinstance(outfile, str):
-#         raise TypeError('outfile must be a string')
-
-#     if verbose:
-#         print('Downloading PRISim package data from {0} ...'.format(url))
-
-#     r = requests.get(url)
-#     with open(outfile, 'wb') as fhandle:
-#         fhandle.write(r.content)
-
-#     if verbose:
-#         print('Downloaded PRISim package data into {0}'.format(outfile))
 
 def extract(infile=None, outdir=None, verbose=True):
     if infile is None:
@@ -106,7 +85,6 @@ if __name__ == '__main__':
 
             if action_type == 'download':
                 download(url=parms[action_type]['url']+parms[action_type]['fid'], outfile=parms[action_type]['fname'], verbose=parms['verbose'])
-                # gdown.download()
             elif action_type == 'extract':
                 extract(infile=parms[action_type]['fname'], outdir=parms[action_type]['dir'], verbose=parms['verbose'])
             else:
